<resources>
    <!-- Titulos -->
    <string name="app_name">Parcial Momento 2</string>
    <string name="myname">Juan Velez</string>
    <string name="register">Regístrate</string>
    <string name="selfRegister">Registrar</string>
    <string name="start">Comienza</string>
    <string name="join">Ingresa</string>
    <string name="login">Inicia sesión</string>

    <!-- Campos formularios -->
    <string name="name">Nombres</string>
    <string name="lastName">Apellidos</string>
    <string name="email">Correo electrónico</string>
    <string name="phone">Teléfono</string>

    <!-- Contraseña -->
    <string name="password">Contraseña</string>
    <string name="recoverPassword">Recupera tu contraseña</string>
    <string name="repeatPassword">Repetir contraseña</string>
    <string name="descRepeatPassword">Ingresa tu correo electrónico para recuperar tu contraseña.</string>

    <!-- Botones -->
    <string name="joinWithGoogle">Ingresar con Google</string>
    <string name="terms">Acepto los términos y condiciones</string>
    <string name="sendRequest">Enviar Solicitud</string>

    <!-- Mensajes genéricos -->
    <string name="haveAccount">¿No tienes una cuenta?</string>
    <string name="alreadyHaveAccount">¿Ya tienes una cuenta?</string>
    <string name="profile">Datos de perfil</string>
    <string name="updateData">Actualizar datos</string>
    <string name="welcomeText">Inicia una nueva aventura con PinkyApp y descubre una nueva forma de ver el mundo</string>
    <string name="calcHealth">Calc. Métricas Salud</string>
    <string name="calculadora">Calculadora de metricas de salud</string>
    <string name="pantalla_de_productos">Pantalla de productos</string>
    <string name="pantalla_de_inicio">Pantalla de inicio</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="inicio">Inicio</string>
    <string name="serviciosfragment">Servicios</string>
    <string name="productos">Productos</string>
    <string name="categorias">Categorías</string>
    <string name="perfil">Perfil</string>
    <string name="carrito">Carrito</string>
    <string name="pantalla_de_categorias">Pantalla de categorias</string>
    <string name="pantalla_de_carrito">Pantalla de carrito</string>
    <string name="pantalla_de_perfil">Pantalla de perfil</string>
    <string name="welcomemenu">Bienvenido | Menú</string>
    <string name="fg_inicio_welcome_text">Explora una selección premium de licores y disfruta de una experiencia de compra fácil y rápida. Encuentra tus marcas favoritas y descubre nuevas opciones para cada ocasión.</string>
    <string name="fg_inicio_title">¡Bienvenido a Blue Label!</string>
    <string name="btn_add">AÑADIR</string>
    <string name="fg_inicio_subtitle">Tu tienda de licores de confianza.</string>
    <string name="whisky">Whisky</string>
    <string name="txt_variedad_de_whiskies_premium">Variedad de whiskies premium</string>
    <string name="go_to">IR</string>
    <string name="vodka">Vodka</string>
    <string name="txt_vodkas_premium_y_de_importaci_n">Vodkas premium y de importación</string>
    <string name="txt_rones_anejos_y_premium">Rones añejos y premium</string>
    <string name="ron">Ron</string>
    <string name="cervezas">Cervezas</string>
    <string name="txt_cervezas_premium">Cervezas premium y de importación</string>
    <string name="tequilas">Tequilas</string>
    <string name="txt_tequilas_premium_de_mexico">Tequilas premium de México</string>
    <string name="txt_ron_a_ejo_12_a_os">Ron añejo 12 años</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="analisis">Analisis</string>
    <string name="historico">Histórico</string>
    <string name="historial_de_lecturas">Historial de Lecturas</string>
</resources>