<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/pink">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <!-- Logo -->
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="130dp"
            android:layout_height="103dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/logo" />

        <!-- Nombre de la App -->
        <TextView
            android:id="@+id/tvNombreApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:fontFamily="@font/adlam_display"
            android:layout_marginBottom="8dp" />

        <!-- Mensaje instructivo -->
        <TextView
            android:id="@+id/tvMensajeInstructivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Regístrate para comenzar tu aventura"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginBottom="24dp" />

        <!-- Campos de texto -->
        <EditText
            android:id="@+id/etNombres"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:inputType="text"
            android:textColorHint="@color/dark_gray"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etApellidos"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/lastName"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="18sp"
            android:inputType="text"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/dark_gray"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTelefono"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/phone"
            android:textColorHint="@color/dark_gray"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textColorHint="@color/dark_gray"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etRepetirPassword"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/repeatPassword"
            android:textColorHint="@color/dark_gray"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <!-- CheckBox de términos y condiciones -->
        <CheckBox
            android:id="@+id/cbTerminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="24dp" />

        <!-- Botón de Registro -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btRegistrar"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/selfRegister"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="24dp" />

    </LinearLayout>

</ScrollView>
