<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/lightblue">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/fg_inicio_title"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/fg_inicio_subtitle"
        android:textColor="@color/darkblue"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/fg_inicio_welcome_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="40dp"/>


</LinearLayout>
