<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink">

    <LinearLayout
        android:layout_width="317dp"
        android:layout_height="29dp"
        android:layout_marginTop="604dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMessageSinCuenta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="@font/adlam_display"
            android:text="@string/alreadyHaveAccount"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btEnviarSolicitud" />

        <TextView
            android:id="@+id/tvTxtIniciaSesion"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="@font/adlam_display"
            android:paddingStart="4dp"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btEnviarSolicitud" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNombreApp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adlam_display"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo2" />

    <ImageView
        android:id="@+id/ivLogo2"
        android:layout_width="130dp"
        android:layout_height="103dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMensajeInstructivo"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/descRepeatPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreApp3" />

    <EditText
        android:id="@+id/etEmailRecuperacion"
        style="@style/EditTextRounded"
        android:layout_width="269dp"
        android:layout_height="44dp"
        android:layout_marginTop="56dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMensajeInstructivo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEnviarSolicitud"
        style="@style/EditTextRounded"
        android:layout_width="253dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_style"
        android:text="@string/sendRequest"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmailRecuperacion" />

</androidx.constraintlayout.widget.ConstraintLayout>
