<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categorías"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="12dp"/>

        <!-- CATEGORÍA 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:background="@drawable/borde_redondeado"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_whiskies_categories"
                android:layout_marginEnd="12dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whisky"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_variedad_de_whiskies_premium"
                    android:textSize="14sp"
                    android:textColor="@color/dark_gray"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnWhiskies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkblue"
                android:text="@string/go_to"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- CATEGORÍA 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:background="@drawable/borde_redondeado"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_ron_categories"
                android:contentDescription="Ron"
                android:layout_marginEnd="12dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ron"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_rones_anejos_y_premium"
                    android:textSize="14sp"
                    android:textColor="@color/dark_gray"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnRon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to"
                android:textSize="14sp"
                android:backgroundTint="@color/darkblue"
                android:textColor="@color/white"/>
        </LinearLayout>

        <!-- CATEGORÍA 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:background="@drawable/borde_redondeado"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_vodka_categories"
                android:layout_marginEnd="12dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vodka"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_vodkas_premium_y_de_importaci_n"
                    android:textSize="14sp"
                    android:textColor="@color/dark_gray"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnVodka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to"
                android:textSize="14sp"
                android:backgroundTint="@color/darkblue"
                android:textColor="@color/white"/>
        </LinearLayout>

        <!-- CATEGORÍA 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:background="@drawable/borde_redondeado"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_beer_categories"
                android:layout_marginEnd="12dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cervezas"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_cervezas_premium"
                    android:textSize="14sp"
                    android:textColor="@color/dark_gray"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnBeer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to"
                android:textSize="14sp"
                android:backgroundTint="@color/darkblue"
                android:textColor="@color/white"/>
        </LinearLayout>

        <!-- CATEGORÍA 5 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:background="@drawable/borde_redondeado"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_tequilas_categorias"
                android:layout_marginEnd="12dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tequilas"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_tequilas_premium_de_mexico"
                    android:textSize="14sp"
                    android:textColor="@color/dark_gray"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnTequila"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to"
                android:textSize="14sp"
                android:backgroundTint="@color/darkblue"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
